--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-  "PREFIX": "x!", 
-  "TOKEN": "TOKEN", 
-  "YOUTUBE_API_KEY": "YT API",
+  "PREFIX": "b!", 
+  "TOKEN": "Nzc1OTMyMDUyMDg3NzY3MDgw.X6thCQ.6ACuA6QAsr4k4Ew2OMShQd-LtSU", 
+  "YOUTUBE_API_KEY": "AIzaSyB7BJ8c6ZGDwhM9_bqQej3-d7iUGHP7ML4",
   "QUEUE_LIMIT": 0,
   "COLOR": "BLUE",
-  "inviteURL": "BOT INVITE URL" 
+  "inviteURL": "https://discord.com/api/oauth2/authorize?client_id=775932052087767080&permissions=8&scope=bot" 
 }
